# FutureProfiler

./: Cargo.toml  README.md
src/: custom_waker.rs  lib.rs  macros.rs  metrics.rs  perfetto_guard.rs  tracing_subscriber.rs  track_manager.rs  waker.rs
src/metrics/: cpu_metrics.rs  mod.rs
src/profiler/: cpu_profiler.rs  default_profiler.rs  metrics_profiler.rs  mod.rs  perfetto_profiler.rs
tests/: perfetto_test.rs  subscriber_test.rs
